--- a/github-search/src/app/form-search/form-search.component.scss
+++ b/github-search/src/app/form-search/form-search.component.scss
@@ -26,27 +26,19 @@
 }
 
 .suggestion-container {
+  height: 245px;
+  overflow-y: scroll;
   position: absolute;
   top: 100%;
   left: 0;
   z-index: 100;
-  display: block;
-  right: auto;
   min-width: 160px;
   margin-top: 2px;
   padding: 5px 0;
   background-color: #fff;
   border: 1px solid #ccc;
-  *border-right-width: 2px;
-  *border-bottom-width: 2px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
   border-radius: 6px;
-  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
   box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
   background-clip: padding-box;
   width: 100%;
 }
@@ -60,13 +52,6 @@
 .suggestion.active, .suggestion:hover {
   color: #fff;
   background-color: #0081c2;
-  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0)
 }
 
 .suggestion p {
