--- a/github-search/src/app/form-search/form-search.component.scss
+++ b/github-search/src/app/form-search/form-search.component.scss
@@ -79,3 +79,20 @@
     right: 15px;
   }
 }
+
+.user-info-wrapper {
+  display: flex;
+
+  .view-profile {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .user-info {
+    margin-bottom: 0;
+
+    .list-group-item {
+      font-size: 16px;
+    }
+  }
+}
